@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: common_options.txt,v 1.8 2008-02-22 08:49:15 guru Exp $
+ *	$Id: common_options.txt,v 1.9 2008-03-24 15:35:34 remko Exp $
  *
  *	Copyright (c) 1991-2008 by P. Wessel and W. H. F. Smith
  *	See COPYING file for copying and redistribution conditions.
@@ -55,9 +55,9 @@
 #define GMT_c_OPT	OPT(c)\fIcopies\fP
 #define GMT_t_OPT	OPT(:)[\fBi\fP|\fBo\fP]
 /* Use b, f when applies to both i and o, else use only the bi, bo, fi, fo variants */
-#define GMT_b_OPT	OPT(b)[\fBi\fP|\fBo\fP][\fBs\fP|\fBS\fP|\fBd\fP|\fBD\fP][\fIncol\fP]
-#define GMT_bi_OPT	OPT(bi)[\fBs\fP|\fBS\fP|\fBd\fP|\fBD\fP][\fIncol\fP]
-#define GMT_bo_OPT	OPT(bo)[\fBs\fP|\fBS\fP|\fBd\fP|\fBD\fP][\fIncol\fP]
+#define GMT_b_OPT	OPT(b)[\fBi\fP|\fBo\fP][\fBs\fP|\fBS\fP|\fBd\fP|\fBD\fP[\fIncol\fP]|\fBc\fP[\fIvar1\fP\fB/\fP\fI...\fP]]
+#define GMT_bi_OPT	OPT(bi)[\fBs\fP|\fBS\fP|\fBd\fP|\fBD\fP[\fIncol\fP]|\fBc\fP[\fIvar1\fP\fB/\fP\fI...\fP]]
+#define GMT_bo_OPT	OPT(bo)[\fBs\fP|\fBS\fP|\fBd\fP|\fBD\fP[\fIncol\fP]|\fBc\fP[\fIvar1\fP\fB/\fP\fI...\fP]]
 #define GMT_f_OPT	OPT(f)[\fBi\fP|\fBo\fP]\fIcolinfo\fP
 #define GMT_fi_OPT	OPT(f)\fIcolinfo\fP
 #define GMT_fo_OPT	OPT(f)\fIcolinfo\fP
